vlib/v/checker/tests/sum_type_result_variant_err.vv
type ResultInt = !i32 | !i64

fn main() {
}
